Add english page and kpi logs tracking

--- a/tables/apparences_avec.json
+++ b/tables/apparences_avec.json
@@ -17,6 +17,6 @@
     "Des restes de créature tuée",
     "De la vapeur qui s'en dégage",
     "Un visage dans le liquide",
-    "Un liquide en mouvement constant",
+    "Un mouvement constant",
     "Une chaleur constante"
 ]
