--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
     server_name potions.datalgo.fr;
 
+    location = /Potions_Generator {
+        return 301 $scheme://$host/;
+    }
+
     location / {
                 proxy_pass http://127.0.0.1:8501/;
                 proxy_set_header        Host $host;
