--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
+fastjsonschema==2.21.1
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.14.0
@@ -19,15 +20,19 @@ Jinja2==3.1.5
 jiter==0.8.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter_core==5.7.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.24.0
+nbformat==5.10.4
 numpy==2.2.2
 openai==1.60.2
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+platformdirs==4.3.6
+plotly==6.0.0
 protobuf==5.29.3
 pyarrow==19.0.0
 pydantic==2.10.6
@@ -49,6 +54,7 @@ tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
